--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <title>Client</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
